# audio_engine

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/audio_buffer/: Cargo.toml  HELPME.md  README.md
crates/audio_buffer/src/: lib.rs
crates/audio_buffer/src/buffers/: mod.rs  view.rs
crates/audio_buffer/src/compatability/: slice.rs
crates/audio_buffer/src/core/: axis.rs  buffer_axis.rs  mod.rs  stride.rs
crates/audio_buffer/src/interleaved_dynamic/: iter.rs  mod.rs
crates/audio_buffer/src/interleaved_static/: iter.rs  mod.rs
crates/audio_buffer/src/loader/: error.rs  mod.rs  probe.rs
crates/audio_graph/: Cargo.toml  README.md
crates/audio_graph/src/: buffer_pool.rs  error.rs  lib.rs  mix_graph.rs  pin_matrix.rs  processor.rs  shared_audio_graph.rs
crates/audio_graph/src/audio_graph/: error.rs  mod.rs
crates/audio_graph/src/mix_graph/: mod.rs  processor.rs  routing.rs  transformer_chain.rs
crates/dsp-chain/src/: graph.rs  node.rs
crates/time/: Cargo.toml
crates/time/src/: frame_time.rs  musical_time.rs  seconds.rs
src/: adjacency_matrix.rs  backend.rs  bus.rs  command.rs  engine.rs  lib.rs  main.rs  message.rs  playlist.rs  timeline.rs  track.rs
src/audio/: cache.rs  decode.rs  error.rs  mod.rs  probe.rs  shared_buffer.rs  slice_buffer.rs
src/memory/: mod.rs  shared_buffer.rs
symphonium/: Cargo.toml
symphonium/examples/: play_file.rs  play_file_stretched.rs
symphonium/src/: decode.rs  lib.rs  resample.rs  resource.rs
time/: README.md
time/src/: lib.rs  musical_time.rs  superclock_time.rs
(+12 files in other folders)
