[package]
name = "audio_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
interavl = "0.3.0"
time = { path = "crates/time" }
audio_buffer = { path = "crates/audio_buffer" }
audio_graph = { path = "crates/audio_graph" }
cpal = "0.16.0"
log = "0.4.28"
crossbeam-channel = "0.5.15"

[workspace]
members = ["crates/time", "crates/audio_buffer", "crates/audio_graph"]
